// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Primitives Snapshot Tests Badge Component renders customized badge correctly 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 9999,
        "borderWidth": 1,
        "elevation": 4,
        "paddingHorizontal": 8,
        "paddingVertical": 2,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#FFD70022",
        "borderColor": "#FFD700",
        "shadowColor": "#FFD700",
      },
      undefined,
    ]
  }
  testID="Anonymous-0-Badge"
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 11,
          "letterSpacing": 0.4,
        },
        {
          "color": "#0D0F14",
        },
      ]
    }
    testID="Badge-0-Text"
  >
    PR
  </Text>
</View>
`;

exports[`UI Primitives Snapshot Tests Badge Component renders default badge correctly 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 9999,
        "borderWidth": 1,
        "elevation": 4,
        "paddingHorizontal": 8,
        "paddingVertical": 2,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#4F8EF722",
        "borderColor": "#4F8EF7",
        "shadowColor": "#4F8EF7",
      },
      undefined,
    ]
  }
  testID="Anonymous-0-Badge"
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 11,
          "letterSpacing": 0.4,
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
    testID="Badge-0-Text"
  >
    WORKOUT
  </Text>
</View>
`;

exports[`UI Primitives Snapshot Tests BarChart Component renders bar chart with valid data correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 200,
      },
      {
        "height": 200,
      },
    ]
  }
  testID="BarChart-0-View"
>
  <View
    style={
      [
        {
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingRight": 8,
        },
        {
          "height": 200,
        },
      ]
    }
    testID="BarChart-1-View"
  >
    <Text
      style={
        {
          "color": "#4E5A6E",
          "fontSize": 11,
          "lineHeight": 15,
          "textAlign": "right",
          "width": 22,
        }
      }
      testID="val-0-Text-0"
    >
      6
    </Text>
    <Text
      style={
        {
          "color": "#4E5A6E",
          "fontSize": 11,
          "lineHeight": 15,
          "textAlign": "right",
          "width": 22,
        }
      }
      testID="val-0-Text-1"
    >
      3
    </Text>
    <Text
      style={
        {
          "color": "#4E5A6E",
          "fontSize": 11,
          "lineHeight": 15,
          "textAlign": "right",
          "width": 22,
        }
      }
      testID="val-0-Text-2"
    >
      0
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "height": 200,
        },
      ]
    }
    testID="BarChart-2-View"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
          "marginHorizontal": 3,
        }
      }
      testID="item-0-View-Mon"
    >
      <View
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.015)",
              "borderColor": "rgba(255, 255, 255, 0.04)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column-reverse",
              "marginBottom": 4,
              "overflow": "hidden",
              "padding": 3,
              "width": "100%",
            },
            {
              "height": 172,
            },
          ]
        }
        testID="item-1-View"
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-0"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-1"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-2"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4E5A6E",
            "fontSize": 10,
            "height": 20,
            "textAlign": "center",
            "width": "100%",
          }
        }
        testID="item-2-Text"
      >
        Mon
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
          "marginHorizontal": 3,
        }
      }
      testID="item-0-View-Tue"
    >
      <View
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.015)",
              "borderColor": "rgba(255, 255, 255, 0.04)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column-reverse",
              "marginBottom": 4,
              "overflow": "hidden",
              "padding": 3,
              "width": "100%",
            },
            {
              "height": 172,
            },
          ]
        }
        testID="item-1-View"
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-0"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-1"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-2"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-3"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-4"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4E5A6E",
            "fontSize": 10,
            "height": 20,
            "textAlign": "center",
            "width": "100%",
          }
        }
        testID="item-2-Text"
      >
        Tue
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
          "marginHorizontal": 3,
        }
      }
      testID="item-0-View-Wed"
    >
      <View
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.015)",
              "borderColor": "rgba(255, 255, 255, 0.04)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column-reverse",
              "marginBottom": 4,
              "overflow": "hidden",
              "padding": 3,
              "width": "100%",
            },
            {
              "height": 172,
            },
          ]
        }
        testID="item-1-View"
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-0"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
          testID="_-0-Animated.View-1"
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
            testID="_-1-LinearGradient"
          />
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4E5A6E",
            "fontSize": 10,
            "height": 20,
            "textAlign": "center",
            "width": "100%",
          }
        }
        testID="item-2-Text"
      >
        Wed
      </Text>
    </View>
  </View>
</View>
`;

exports[`UI Primitives Snapshot Tests Card Component renders active variant card correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#161B24",
        "borderColor": "#252D3A",
        "borderRadius": 16,
        "borderWidth": 1,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 10,
      },
      {
        "borderColor": "#4F8EF7",
        "borderWidth": 1.5,
      },
      {
        "padding": 20,
      },
      undefined,
    ]
  }
  testID="Anonymous-0-Card"
>
  <View
    testID="Anonymous-1-View"
  />
</View>
`;

exports[`UI Primitives Snapshot Tests Card Component renders default variant card correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#161B24",
        "borderColor": "#252D3A",
        "borderRadius": 16,
        "borderWidth": 1,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 10,
      },
      {},
      {
        "padding": 16,
      },
      undefined,
    ]
  }
  testID="Anonymous-0-Card"
>
  <View
    testID="Anonymous-1-View"
  />
</View>
`;

exports[`UI Primitives Snapshot Tests Card Component renders highlight variant card correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#161B24",
        "borderColor": "#252D3A",
        "borderRadius": 16,
        "borderWidth": 1,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 10,
      },
      {
        "borderLeftColor": "#4F8EF7",
        "borderLeftWidth": 3,
      },
      {
        "padding": 16,
      },
      undefined,
    ]
  }
  testID="Anonymous-0-Card"
>
  <View
    testID="Anonymous-1-View"
  />
</View>
`;
